# nb2ns

./: LICENSE  README.md  pyproject.toml
examples/: demo.py
src/runnb/: _core.py
tests/: test_magics.py  test_run_notebook.py
