[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runnb"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.0",
    "nbformat>=5.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.version]
path = "src/runnb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/runnb"]
